Map: fix place layout caused by tag length overflow

--- a/resources/assets/sass/pages/place/_index.scss
+++ b/resources/assets/sass/pages/place/_index.scss
@@ -67,6 +67,7 @@
         display: flex;
         flex-direction: column;
         flex: 0 0 400px;
+        max-width: 400px;
 
         background-color: #ffffff;
 
